Pedir obra social al cargar manualmente un paciente

--- a/calendario/templates/calendario-gestionar.html
+++ b/calendario/templates/calendario-gestionar.html
@@ -145,6 +145,7 @@
       });
       $("#select2Servicios").select2();
       $("#select2Servicios").change();
+      $("#cargar_oss").select2();
     }
     initServicioSelect();
     
@@ -206,7 +207,12 @@
         'paciente':$("#cargar_dni").val(),
         'apellidos':$("#cargar_apellidos").val(),
         'nombres':$("#cargar_nombres").val(),
+        'oss':$("#cargar_oss").val(),
       }
+      if($("#cargar_numero-afiliado").val().trim() != ""){
+        formData['numero-afiliado'] = $("#cargar_numero-afiliado").val().trim();
+      }
+      
       let pk = $("#cargar_turn_pk").val()
       axios({
         method: 'PUT',
@@ -291,22 +297,50 @@
       </div>
       <div class="modal-body">
         <p id="modal-body-text">El paciente no estaba registrado en el sistema, ingresa los siguientes datos para el alta del mismo y agendar el turno.</p>
-        <div class="form-group">
-          <label for="dni" class="col-form-label">DNI Paciente:</label>
-          <input class="form-control cargar-inputs" id="cargar_dni"></input>
-          <span class="help-block cargar-errores" id="cargar_dni-error" style="display: none;">El dni es incorrecto</span>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="dni" class="col-form-label">DNI Paciente:</label>
+              <input class="form-control cargar-inputs" id="cargar_dni"></input>
+              <span class="help-block cargar-errores" id="cargar_dni-error" style="display: none;">El dni es incorrecto</span>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="dni" class="col-form-label">Numero de afiliado:</label>
+              <input class="form-control cargar-inputs" id="cargar_numero-afiliado"></input>
+            </div>
+          </div>
         </div>
-        <div class="form-group">
-          <label for="dni" class="col-form-label">Nombres:</label>
-          <input class="form-control cargar-inputs" id="cargar_nombres"></input>
-          <span class="help-block cargar-errores" id="cargar_nombres-error" style="display: none;">El nombre no puede estar vacio</span>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="dni" class="col-form-label">Nombres:</label>
+              <input class="form-control cargar-inputs" id="cargar_nombres"></input>
+              <span class="help-block cargar-errores" id="cargar_nombres-error" style="display: none;">El nombre no puede estar vacio</span>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="dni" class="col-form-label">Apellidos:</label>
+              <input class="form-control cargar-inputs" id="cargar_apellidos"></input>
+              <span class="help-block cargar-errores" id="cargar_apellidos-error" style="display: none;">El apellido no puede estar vacio</span>
+            </div>
+          </div>
         </div>
-        <div class="form-group">
-          <label for="dni" class="col-form-label">Apellidos:</label>
-          <input class="form-control cargar-inputs" id="cargar_apellidos"></input>
-          <span class="help-block cargar-errores" id="cargar_apellidos-error" style="display: none;">El apellido no puede estar vacio</span>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="form-group">
+              <label for="dni" >Obra Social:</label>
+              <select class="form-control" id="cargar_oss">
+                {% for os in obras_sociales %}
+                <option value="{{os.pk}}">{{os.nombre}}</option>
+                {% endfor %}
+              </select>
+            </div>
+          </div>
         </div>
-        <input id="cargar_turn_pk" calss="cargar-inputs" hidden/>
+        <input id="cargar_turn_pk" class="cargar-inputs" hidden/>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
