--- a/calendario/templates/manage_turno_modal.html
+++ b/calendario/templates/manage_turno_modal.html
@@ -31,6 +31,7 @@ function editarEstadoTurno(estado){
     .then(response => {
       if (!response.data.success) {
         console.error(response.data.errors);
+        alert('Error al cambiar el estado del turno: ' + response.data.errors.state)
       } else {
         calendar.refetchEvents();
         $('#manageTurnoModal').modal('hide');
