filtrar la lista de consultas de los profesionales solo a las suyas. Agregar menu para turnos

--- a/ggg/templates/menu_lat_admin.html
+++ b/ggg/templates/menu_lat_admin.html
@@ -167,6 +167,14 @@ Centro de salud activo
             <a href="{% url 'calendario.gestion_turnos' %}">Gestion de turnos</a>
         </li>
         {% endif %}
+
+        {% if perms.profesionales.add_consulta %}
+        <li>
+            <a href="{% url 'profesionales.home' %}">Turnos profesional</a>
+        </li>
+        {% endif %}
+
+        
         </ul>
     </li>
     {% endif %}
