--- a/calendario/templates/calendario-agregar.html
+++ b/calendario/templates/calendario-agregar.html
@@ -268,7 +268,12 @@
         </button>
       </div>
       <div class="modal-body" id="imprimirBody">
-        <h1 id="impServicio"></h1>
+        <div class="row">
+          <div class="col-md-12">
+              <h1 id="impServicio"></h1>
+              <img src="{{sys_logo}}" alt="logo" style="position:absolute;top:0;right:15%;">
+          </div>
+        </div>
         <p id="pImpProfesional" style="display: none;">
           Profesional: <strong id="impProfesional"></strong></p>
         <p>Fecha: <strong id="impFecha"></strong></p>
