--- a/calendario/templates/manage_turno_modal.html
+++ b/calendario/templates/manage_turno_modal.html
@@ -1,5 +1,5 @@
 <script>
-var states = ['DISPONILE','ASIGNADO','ESPERANDO_EN_SALA','ATENDIDO','CANCELADO_PACIENTE','CANCELADO_ESTABLECIMIENTO']
+var states = ['DISPONIBLE','ASIGNADO','ESPERANDO_EN_SALA','ATENDIDO','CANCELADO_PACIENTE','CANCELADO_ESTABLECIMIENTO']
 
 function cargarData(data){
   if (data.extendedProps.patient == 0){
