agergar ruta de media y css para el logo

--- a/calendario/templates/calendario-agregar.html
+++ b/calendario/templates/calendario-agregar.html
@@ -271,7 +271,8 @@
         <div class="row">
           <div class="col-md-12">
               <h1 id="impServicio"></h1>
-              <img src="{{sys_logo}}" alt="logo" style="position:absolute;top:0;right:15%;">
+              <img src="{{sys_logo}}" alt="logo" 
+              style="position:absolute;top:0;right:15%;width: 50px;height: 50px;">
           </div>
         </div>
         <p id="pImpProfesional" style="display: none;">
