--- a/calendario/templates/calendario-agregar.html
+++ b/calendario/templates/calendario-agregar.html
@@ -292,10 +292,12 @@
         <div class="row">
           <div class="col-md-12">
               <h1 id="impServicio"></h1>
-              <img src="{{sys_logo}}" alt="logo" 
-              style="position:absolute;top:0;right:15%;max-width: 75px;max-height: 75px;">
           </div>
         </div>
+        <p style="float: right; max-width: 75px; max-height: 75px;">
+          <img src="{{sys_logo}}" alt="logo" 
+              style="float: right; max-width: 75px; max-height: 75px;">
+        </p>
         <p id="pImpProfesional" style="display: none;">
           Profesional: <strong id="impProfesional"></strong></p>
         <p>Fecha: <strong id="impFecha"></strong></p>
