seteo a null valores de modal al cerrarlo. Falta ver porque no funciona con el widget de autocomplete. Fixed #105

--- a/calendario/templates/calendario.html
+++ b/calendario/templates/calendario.html
@@ -317,6 +317,12 @@
   <script>
     'use strict';
     $('#modalForm').on('hidden.bs.modal', () => {
+      document.getElementById('id_inicio').value = null;
+      document.getElementById('id_fin').value = null;
+      document.getElementById('id_servicio').value = null;
+      document.getElementById('id_profesional').value = null;
+      // $("#id_servicio").val(-1);
+
       document.getElementById('appointmentId').value = null;
       document.getElementById('deleteAppointment').value = null;
       document.getElementById('closeModalButton').hidden = false;
