--- a/profesionales/templates/profesionales/profesional_form.html
+++ b/profesionales/templates/profesionales/profesional_form.html
@@ -18,5 +18,6 @@
 
 {% endblock %}
 {% block js_footer %}
+    {{ block.super }}
     <script type="text/javascript" src="{% static 'admin/js/vendor/jquery/jquery.js' %}"></script>
 {% endblock js_footer %}
